--- a/view/index.html
+++ b/view/index.html
@@ -43,6 +43,6 @@
         ></script>
 
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-        <script src="./script.js"></script>
+        <script type="module" src="./script.js"></script>
     </body>
 </html>
