--- a/view/style.css
+++ b/view/style.css
@@ -5,13 +5,15 @@ html {
   margin: 0;
   box-sizing: border-box;
   background-color: #f8f9fa;
-  display: flex;
-  justify-content: center;
 }
 
 body {
   width: 100%;
-  padding: 20px;
+  padding: 50px 0px;
+  display: flex;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
 }
 
 * {
@@ -22,6 +24,17 @@ body {
   * {
     font-size: 1rem;
   }
+}
+
+.tip {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: center;
+  background-color: #acc0d6;
+  color: #fff;
+  padding: 8px;
 }
 
 #app {
