--- a/view/style.scss
+++ b/view/style.scss
@@ -84,6 +84,9 @@ body {
         background-color: #f8f9fa;
     }
 }
+.taskslist{
+    align-items: center;
+}
 .updateInput,
 .inputText {
     border: none;
@@ -123,9 +126,11 @@ body {
     transition: 0.5s ease;
     opacity: 0; /* 默认不可见 */
     max-height: 0;
+    pointer-events: none;
 }
 .fade-enter-active {
     transition: 0.5s ease;
     opacity: 1; /* 完全可见 */
     max-height: 100px;
+    pointer-events: visible;
 }
